test/samples/invalid/interp/assert.maruir
fun main() {
	entry:
		assert false;
		return;
}
